adds form element in html, adds javascript to access form input value

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Project Title</title>
 </head>
 <body>
-    
+    <div>
+        <form id="form-element" action="#" method="GET">
+            <label for="searchQuery">Search Books:</label>
+            <input type="text" id="searchQuery" name="searchQuery" placeholder="Enter a book title">
+            <input type="submit" value="Search">
+        <br>
+    </form>
+    </div>
+    <div id="resultDiv">
+
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
