--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Project Title</title>
-</head>
-<body>
-    <div>
+  </head>
+  <body>
+    <nav id="navigation">
+      <div>
         <form id="form-element" action="#" method="GET">
-            <label for="searchQuery">Search Books:</label>
-            <input type="text" id="searchQuery" name="searchQuery" placeholder="Enter a book title">
-            <br>
-            <label for="searchCategory">Filter type</label>
-            <select id="searchCategory">
-                <option value="all">Default Search</option>
-                <option value="authors">Authors</option>
-                <option value="books">Books</option>
-                <option value="subjects">Subjects</option>
-            </select>
-            <br>
-            <input type="submit" value="Search">
-        <br>
-    </form>
-    </div>
-    <div id="resultDiv">
-
-    </div>
+          <label for="searchQuery">Search Books:</label>
+          <input
+            type="text"
+            id="searchQuery"
+            name="searchQuery"
+            placeholder="Enter a book title"
+          />
+          <br />
+          <label for="searchCategory">Filter type</label>
+          <select id="searchCategory">
+            <option value="all">Default Search</option>
+            <option value="authors">Authors</option>
+            <option value="books">Books</option>
+            <option value="subjects">Subjects</option>
+          </select>
+          <br />
+          <input type="submit" value="Search" />
+          <br />
+        </form>
+      </div>
+    </nav>
+    <div id="resultDiv"></div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
