--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 type="search"
                 id="searchQuery"
                 name="searchQuery"
-                placeholder="Enter a book title"
+                placeholder="Search titles, authors, and more"
               />
               <!-- <label for="searchCategory">Filter type</label> -->
               <input id="sumbit-button" type="submit" value="Search" />
