changes title, adds css to search button, adds linkedin to social links

--- a/index.html
+++ b/index.html
@@ -9,24 +9,17 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <title>Project Title</title>
+    <title>BookBrowse</title>
   </head>
   <body>
     <header class="header">
       <div class="header-1">
         <a href="" class="logo"
-          ><i class="ri-book-open-fill"><span>Bookie</span></i></a
+          ><i class="ri-book-open-fill"><span>BookBrowse</span></i></a
         >
         <nav id="navigation">
           <div>
             <form id="form-element" action="#" method="GET">
-              <!-- <label for="searchQuery">Search Books:</label> -->
-              <select id="searchCategory">
-                <option value="all">Default Search</option>
-                <option value="authors">Authors</option>
-                <option value="books">Books</option>
-                <option value="subjects">Subjects</option>
-              </select>
               <input
                 type="search"
                 id="searchQuery"
@@ -40,7 +33,16 @@
         </nav>
 
         <div class="social-links">
-          <a href=""><i class="ri-github-fill"></i></a>
+          <a
+            href="https://github.com/Alex-Trotman/phase-1-project"
+            target="_blank"
+            ><i class="ri-github-fill"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/alex-trotman-7173b1245/"
+            target="_blank"
+            ><i class="ri-linkedin-box-fill"></i
+          ></a>
         </div>
       </div>
     </header>
