--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header class="header">
       <div class="header-1">
         <a href="" class="logo"
-          ><i class="ri-book-open-fill"><span>BookBrowse</span></i></a
+          ><i class="ri-book-open-fill"
+            ><span id="title">BookBrowse</span></i
+          ></a
         >
         <nav id="navigation">
           <div>
@@ -26,7 +28,6 @@
                 name="searchQuery"
                 placeholder="Search titles, authors, and more"
               />
-              <!-- <label for="searchCategory">Filter type</label> -->
               <input id="sumbit-button" type="submit" value="Search" />
             </form>
           </div>
