fixed typo error in submit button in html and css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 name="searchQuery"
                 placeholder="Search titles, authors, and more"
               />
-              <input id="sumbit-button" type="submit" value="Search" />
+              <input id="submit-button" type="submit" value="Search" />
             </form>
           </div>
         </nav>
